Added NPE-validation for filterMovies