@@ -1,7 +1,5 @@
 package org.example.webapplab1.movies;
-import org.hibernate.query.Page;
 import org.springframework.stereotype.Service;
-
 import java.time.LocalDate;
 import java.util.List;
 import java.util.NoSuchElementException;
@@ -35,10 +33,20 @@ public class MovieService {
         return movieRepo.findByTitleContainingIgnoreCase(title);
     }
     public List <Movie> filterMovies(String title, String director, LocalDate releaseDate) {
-        return movieRepo.findAll().stream()
-                .filter(m-> title == null || m.getTitle().toLowerCase().contains(title.toLowerCase()))
-                .filter(m-> director == null || m.getDirector().toLowerCase().contains(director.toLowerCase()))
-                .filter(m-> releaseDate == null || m.getReleaseDate().isEqual(releaseDate))
-                .collect(Collectors.toList());
+        String searchTitle = title == null ? "" : title.toLowerCase();
+        String searchDirector = director == null ? "" : director.toLowerCase();
+
+        if (releaseDate == null) {
+            return movieRepo.findAll().stream()
+                    .filter(m -> m.getTitle() != null && m.getTitle().toLowerCase().contains(searchTitle))
+                    .filter(m -> m.getDirector() != null && m.getDirector().toLowerCase().contains(searchDirector))
+                    .toList();
+        }
+
+        return movieRepo.findByTitleContainingIgnoreCaseAndDirectorContainingIgnoreCaseAndReleaseDate(
+                title == null ? "" : title,
+                director == null ? "" : director,
+                releaseDate
+        );
     }
 }
